Fix text blurring issue during card hover scale

--- a/css/main.css
+++ b/css/main.css
@@ -226,6 +226,9 @@ h5 {
   overflow: hidden;
   box-shadow: 2px 5px 28px -6px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease-in-out;
+  will-change: transform;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 @media screen and (min-width: 992px) {
   .movie-item:hover {
